packages/isar_generator/test/errors/property/enum_not_annotated.dart
// enum property must be annotated with @enumerated

import 'package:isar/isar.dart';

@collection
class Model {
  Id? id;

  late MyEnum? prop;
}

enum MyEnum {
  a;
}
